# hire

./: Cargo.toml  LICENSE  README.md  install.sh
keymap_config/: colemak.toml  default.toml
src/: app.rs  key_event.rs  main.rs  ui.rs
src/app/: app_result.rs  color.rs  command.rs  filesaver.rs  image_preview.rs  mod.rs  special_types.rs
src/command/: cmd_line.rs  cmd_utils.rs  cmds.rs  mod.rs  types.rs
src/config/: keymap.rs  mod.rs  types.rs
src/error/: mod.rs  types.rs
src/key_event/: command_line.rs  cursor_movement.rs  file_operations.rs  file_search.rs  goto_operation.rs  interaction.rs  mod.rs  paste_operation.rs  shell_command.rs  simple_operations.rs  switch_operation.rs  tab.rs
src/key_event/cursor_movement/: mod.rs  types.rs
src/key_event/edit/: mod.rs  types.rs
src/key_event/shell/: mod.rs  types.rs  utils.rs
src/key_event/switch/: mod.rs  traits.rs
src/key_event/tab/: mod.rs  types.rs  utils.rs
src/ui/: child_block.rs  cmdline_popup.rs  command_line.rs  current_block.rs  list.rs  mod.rs  parent_block.rs  utils.rs
src/utils/: mod.rs  types.rs
