[package]
name = "hire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.24"
crossterm = "0.26"
chrono = { version = "0.4.31", features = ["alloc", "std"] }
file-size = "1.0.3"
copy_dir = "0.1.3"
is_executable = "1.0.1"
toml_edit = "0.22.6"
