[package]
name = "hire"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.29"
ratatui-image = "~4.2.0"
crossterm = "0.27"
chrono = { version = "0.4.31", features = ["alloc", "std"] }
file-size = "1.0.3"
copy_dir = "0.1.3"
is_executable = "1.0.1"
toml_edit = "0.22.6"
image = "0.25.5"
thiserror = "~2.0"
anyhow = "~1.0"
