[package]
name = "hire"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core Basic deps
ratatui = "0.29"
ratatui-image = "5"
ansi-to-tui = "7"
chrono = { version = "0.4.31", features = ["alloc", "std"] }
clap = { version = "~4.5", features = ["derive"]}
thiserror = "~2.0"
anyhow = "~1.0"
lazy_static = "1"

# Extensions
file-size = "1.0.3"
copy_dir = "0.1.3"
is_executable = "1.0.1"
toml_edit = "0.22.24"
image = "0.25.5"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
strip = true